--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- Hero Section -->
   <section class="hero" id="hero">
     <p class="icon">
-		<img src="images/icon.png" width="10%" height=auto alt=""/>
+		<img src="images/icon.png" width="128px" height=auto alt=""/>
 	</p>
 	<h2 class="hero_header">WHITE SCORPION</h2>
   </section>
@@ -67,7 +67,7 @@
 		<iframe src="https://www.youtube.com/embed/xlXkw-ShPjQ?si=EFQB8u9f5GQT55Tf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	</div>
 	<div class="spotify">
-		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5LNpqa89tsQv64QYzfvsE5?utm_source=generator&amp;theme=0" width="100%" height="370" frameborder="0" allowfullscreen="allowfullscreen" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5LNpqa89tsQv64QYzfvsE5?utm_source=generator&theme=0" width="80%" height="370" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 	</div>
 
 	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_official" data-unique-id="whsp_official" data-embed-type="creator" style="max-width: 780px; min-width: 288px;">
@@ -77,51 +77,6 @@
 	</blockquote>
   <script async="async" src="https://www.tiktok.com/embed.js"></script>
   </section>
-  <!-- Stats Gallery Section -->
-  <div class="gallery">
-    <div class="thumbnail">
-      <h1 class="stats">1500</h1>
-      <h4>TITLE</h4>
-      <p>One line description</p>
-    </div>
-    <div class="thumbnail">
-      <h1 class="stats">2300</h1>
-      <h4>TITLE</h4>
-      <p>One line description</p>
-    </div>
-    <div class="thumbnail">
-      <h1 class="stats">7500</h1>
-      <h4>TITLE</h4>
-      <p>One line description</p>
-    </div>
-    <div class="thumbnail">
-      <h1 class="stats">9870</h1>
-      <h4>TITLE</h4>
-      <p>One line description</p>
-    </div>
-  </div>
-
-  <!-- More Info Section -->
-  <footer>
-    <article class="footer_column">
-      <h3>ABOUT</h3>
-      <img src="images/placeholder.jpg" alt="" width="400" height="200" class="cards"/>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla </p>
-    </article>
-    <article class="footer_column">
-      <h3>LOCATION</h3>
-      <img src="images/placeholder.jpg" alt="" width="400" height="200" class="cards"/>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla </p>
-    </article>
-  </footer>
-  <!-- Footer Section -->
-  <section class="footer_banner" id="contact">
-    <h2 class="hidden">Footer Banner Section </h2>
-    <p class="hero_header">FOR THE LATEST NEWS &amp; UPDATES</p>
-    <div class="button">subscribe</div>
-  </section>
-  <!-- Copyrights Section -->
-  <div class="copyright">&copy;2021- <strong>Light Theme</strong></div>
 </div>
 <!-- Main Container Ends -->
 </body>
