--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 		<iframe src="https://www.youtube.com/embed/xlXkw-ShPjQ?si=EFQB8u9f5GQT55Tf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	</div>
 	<div class="spotify">
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5LNpqa89tsQv64QYzfvsE5?utm_source=generator&theme=0" width="80%" height="370" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5LNpqa89tsQv64QYzfvsE5?utm_source=generator&theme=0" width="80%" height="370" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 	</div>
 
-	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_official" data-unique-id="whsp_official" data-embed-type="creator" style="max-width: 780px; min-width: 288px;">
+	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_official" data-unique-id="whsp_official" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" autoplay="0" muted >
     	<section>
         	<a target="_blank" href="https://www.tiktok.com/@whsp_official?refer=creator_embed">@whsp_official</a>
     	</section>
