--- a/index.html
+++ b/index.html
@@ -20,17 +20,6 @@
 <!-- Main Container -->
 <div class="container"> 
   <!-- Navigation -->
-  <header> <a href="">
-    <h4 class="logo"></h4>
-    </a>
-    <nav>
-      <ul>
-        <li><a href="#hero">HOME</a></li>
-        <li><a href="#about">ABOUT</a></li>
-        <li> <a href="#contact">CONTACT</a></li>
-      </ul>
-    </nav>
-  </header>
   <!-- Hero Section -->
   <section class="hero" id="hero">
     <p class="icon">
@@ -67,16 +56,34 @@
 		<iframe src="https://www.youtube.com/embed/xlXkw-ShPjQ?si=EFQB8u9f5GQT55Tf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	</div>
 	<div class="spotify">
-		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5LNpqa89tsQv64QYzfvsE5?utm_source=generator&theme=0" width="80%" height="370" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5LNpqa89tsQv64QYzfvsE5?utm_source=generator&theme=0" width="780" height="370" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 	</div>
 
-	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_official" data-unique-id="whsp_official" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" autoplay="0" muted >
+	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_official"  autoplay="0" muted data-unique-id="whsp_official" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" >
     	<section>
         	<a target="_blank" href="https://www.tiktok.com/@whsp_official?refer=creator_embed">@whsp_official</a>
     	</section>
 	</blockquote>
+	  <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_manager"  autoplay="0" muted data-unique-id="whsp_manager" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" > <section> <a target="_blank" href="https://www.tiktok.com/@whsp_manager?refer=creator_embed">@whsp_manager</a> </section> </blockquote> 
+	  
   <script async="async" src="https://www.tiktok.com/embed.js"></script>
   </section>
+	<hr>
+  <section class="official">
+		<h3>WHITE SCORPION X MEMBER LIST</h3>
+		<ul class="official_link">
+			<li><a href="https://x.com/whsp_official"><img src="images/x.png" /></a></li>
+		</ul>
+  </section>
+  <hr>
+  <section class="official">
+		<h3>WHITE SCORPION X MEMBER LIST</h3>
+		<ul class="official_link">
+			<li><a href="https://x.com/whsp_official"><img src="images/x.png" /></a></li>
+		</ul>
+  </section>
+  <hr>
+
 </div>
 <!-- Main Container Ends -->
 </body>
