--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
   <!-- Navigation -->
   <!-- Hero Section -->
   <section class="hero" id="hero">
-    <p class="icon">
-		<img src="images/icon.png" width="128px" height=auto alt=""/>
-	</p>
+    	<p class="icon"><img src="images/icon.png" width="128px" height=auto alt=""/></p>
 	<h2 class="hero_header">WHITE SCORPION</h2>
   </section>
   <section class="guidance">
@@ -56,33 +54,41 @@
 		<iframe src="https://www.youtube.com/embed/xlXkw-ShPjQ?si=EFQB8u9f5GQT55Tf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	</div>
 	<div class="spotify">
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5LNpqa89tsQv64QYzfvsE5?utm_source=generator&theme=0" width="780" height="370" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5LNpqa89tsQv64QYzfvsE5?utm_source=generator&theme=0" width="780" height="370" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 	</div>
 
-	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_official"  autoplay="0" muted data-unique-id="whsp_official" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" >
-    	<section>
-        	<a target="_blank" href="https://www.tiktok.com/@whsp_official?refer=creator_embed">@whsp_official</a>
-    	</section>
+	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_official"  data-autoplay="false" muted data-unique-id="whsp_official" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" >
+    		<section><a target="_blank" href="https://www.tiktok.com/@whsp_official">@whsp_official</a></section>
 	</blockquote>
-	  <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_manager"  autoplay="0" muted data-unique-id="whsp_manager" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" > <section> <a target="_blank" href="https://www.tiktok.com/@whsp_manager?refer=creator_embed">@whsp_manager</a> </section> </blockquote> 
-	  
-  <script async="async" src="https://www.tiktok.com/embed.js"></script>
-  </section>
-	<hr>
-  <section class="official">
-		<h3>WHITE SCORPION X MEMBER LIST</h3>
-		<ul class="official_link">
-			<li><a href="https://x.com/whsp_official"><img src="images/x.png" /></a></li>
-		</ul>
+	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_manager"  data-autoplay="false" muted data-unique-id="whsp_manager" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" >
+		<section> <a target="_blank" href="https://www.tiktok.com/@whsp_manager">@whsp_manager</a> </section>
+	</blockquote>  
+  	<script async="async" src="https://www.tiktok.com/embed.js"></script>
   </section>
   <hr>
   <section class="official">
-		<h3>WHITE SCORPION X MEMBER LIST</h3>
-		<ul class="official_link">
-			<li><a href="https://x.com/whsp_official"><img src="images/x.png" /></a></li>
-		</ul>
+	<h3>WHITE SCORPION X MEMBER LIST</h3>
+	<ul class="official_link">
+		<li><a href="https://x.com/whsp_official"><img src="images/x.png" /></a></li>
+	</ul>
   </section>
   <hr>
+  <section class="official">
+	<h3>WHITE SCORPION MANAGER</h3>
+	<ul class="official_link">
+		<li><a href="https://www.tiktok.com/@whsp_manager"><img src="images/x.png" /></a></li>
+	</ul>
+  </section>
+  <hr>
+  <section class="menbers">
+	  <div class="member">
+		  <div><img src="images/icon.png"></div>
+		  <div>
+			  <div>TEST</div>
+			  <img src="images/x.png">
+		  </div>
+	  </div>
+  </section>
 
 </div>
 <!-- Main Container Ends -->
