--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5LNpqa89tsQv64QYzfvsE5?utm_source=generator&theme=0" width="780" height="370" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 	</div>
 
-	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_official"  data-autoplay="false" muted data-unique-id="whsp_official" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" >
+	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_official"  data-autoplay="false" muted data-unique-id="whsp_official" data-embed-type="creator" style="max-width: 780px; min-width: 288px; max-height:560px; " >
     		<section><a target="_blank" href="https://www.tiktok.com/@whsp_official">@whsp_official</a></section>
 	</blockquote>
-	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_manager"  data-autoplay="false" muted data-unique-id="whsp_manager" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" >
+	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_manager"  data-autoplay="false" muted data-unique-id="whsp_manager" data-embed-type="creator" style="max-width: 780px; min-width: 288px; max-height:560px;" >
 		<section> <a target="_blank" href="https://www.tiktok.com/@whsp_manager">@whsp_manager</a> </section>
 	</blockquote>  
   	<script async="async" src="https://www.tiktok.com/embed.js"></script>
@@ -82,7 +82,7 @@
   <hr>
   <section class="menbers">
 	  <div class="member">
-		  <div><img src="images/icon.png"></div>
+		  <div><img src="images/web.png"></div>
 		  <div>
 			  <div>TEST</div>
 			  <img src="images/x.png">
