--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<li><a href="https://whitescorpion.jp/"><img src="images/web.png" alt=""/></a></li>
 		<li><a href="https://fc.whitescorpion.jp/"><img src="images/fan.png" /></a></li>
 		<li><a href="https://x.com/whsp_official"><img src="images/x.png" /></a></li>
-		<li><a href="https://www.instagram.com/whsp_officia"><img src="images/insta.png" /></a></li>
+		<li><a href="https://www.instagram.com/whsp_official"><img src="images/insta.png" /></a></li>
 		<li><a href="https://www.tiktok.com/@whsp_official"><img src="images/tiktok.png" /></a></li>
 	</ul>
 	<ul class="official_link">
