--- a/index.html
+++ b/index.html
@@ -84,8 +84,11 @@
 	  <div class="member">
 		  <div><img src="images/web.png"></div>
 		  <div>
-			  <div>TEST</div>
-			  <img src="images/x.png">
+			<div>TEST</div>
+			<ul class="member_icon">
+				<li><a href="https://x.com/ace_whsp"><img src="images/x.png" /></a></li>
+				<li><a href="https://www.instagram.com/ace_whsp_igm"><img src="images/insta.png" /></a></li>
+			</ul>
 		  </div>
 	  </div>
   </section>
