--- a/index.html
+++ b/index.html
@@ -64,12 +64,30 @@
 	</ul>
   </section>
   <hr>
+	  <section class="media">
+	<div class="youtube">
+		<iframe src="https://www.youtube.com/embed/xlXkw-ShPjQ?si=EFQB8u9f5GQT55Tf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	</div>
+	<div class="spotify">
+		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5LNpqa89tsQv64QYzfvsE5?utm_source=generator&theme=0" width="780" height="370" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+	</div>
+
+	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_official"  data-autoplay="false" muted data-unique-id="whsp_official" data-embed-type="creator" style="max-width: 780px; min-width: 288px; height: 304px; " >
+    		<section><a target="_blank" href="https://www.tiktok.com/@whsp_official">@whsp_official</a></section>
+	</blockquote>
+	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_manager"  data-autoplay="false" muted data-unique-id="whsp_manager" data-embed-type="creator" style="max-width: 780px; min-width: 288px; height: 284px;" >
+		<section> <a target="_blank" href="https://www.tiktok.com/@whsp_manager">@whsp_manager</a> </section>
+	</blockquote>  
+  	<script async="async" src="https://www.tiktok.com/embed.js"></script>
+  </section>
+	<hr>
   <section class="members">
 	  <article class="members_list">
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">ACE</p>
 				<ul class="member_icon">
+					<li><a href="https://whitescorpion.jp/member/#member-ace"><img src="images/web.png" /></a></li>
 					<li><a href="https://x.com/ace_whsp"><img src="images/x.png" /></a></li>
 					<li><a href="https://www.instagram.com/ace_whsp_ig"><img src="images/insta.png" /></a></li>
 				</ul>
