--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Light Theme</title>
+<title>WHITE SCORPION FAN</title>
 <link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <script>var __adobewebfontsappname__="dreamweaver"</script>
@@ -17,20 +17,31 @@
     <![endif]-->
 </head>
 <body>
+  <!-- Navigation -->
+  <header class="header"> <a href="">
+    <h4 class="logo"></h4>
+    </a>
+    <nav>
+      <ul>
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#media">CONTENTS</a></li>
+        <li> <a href="#members">MEMBER</a></li>
+      </ul>
+    </nav>
+  </header>
 <!-- Main Container -->
 <div class="container"> 
-  <!-- Navigation -->
+
   <!-- Hero Section -->
-  <section class="hero" id="hero">
-    	<p class="icon"><img src="images/icon.png" width="128px" height=auto alt=""/></p>
-	<h2 class="hero_header">WHITE SCORPION</h2>
-  </section>
-  <section class="guidance">
+	
+  <section class="home" id="home">
+    <p class="icon"><img src="images/icon.png" width="128px" height=auto alt=""/></p>
+	<h2 class="home_header">WHITE SCORPION</h2>
 	<p class="tagline">WHITE SCORPIONファンによる<BR>非公式リンクページです</p>
   </section>
   <hr>
 
-  <section class="official">
+  <section class="center">
 	<h3>WHITE SCORPION OFFICIAL</h3>
 	<ul class="official_link">
 		<li><a href="https://whitescorpion.jp/"><img src="images/web.png" alt=""/></a></li>
@@ -47,9 +58,20 @@
 		<li><a href="https://lin.ee/D9cksiN"><img src="images/linem.png" /></a></li>
 		<li><a href="https://music.amazon.co.jp/artists/B0CNSLKWL5?ref=dm_sh_EWmasNWqL8gjqZwbabcrd68PO"><img src="images/amazonm.png" /></a></li>
 	</ul>
+    <hr>
+	<h3>WHITE SCORPION X MEMBER LIST</h3>
+	<ul class="official_link">
+		<li><a href="https://x.com/whsp_official"><img src="images/x.png" /></a></li>
+	</ul>
+    <hr>
+	<h3>WHITE SCORPION MANAGER</h3>
+	<ul class="official_link">
+		<li><a href="https://www.tiktok.com/@whsp_manager"><img src="images/x.png" /></a></li>
+	</ul>
   </section>
   <hr>
-  <section class="media">
+  <section class="media" id="media">
+	  <h2>CONTENTS</h2>
 	<div class="youtube">
 		<iframe src="https://www.youtube.com/embed/xlXkw-ShPjQ?si=EFQB8u9f5GQT55Tf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	</div>
@@ -66,21 +88,8 @@
   	<script async="async" src="https://www.tiktok.com/embed.js"></script>
   </section>
   <hr>
-  <section class="official">
-	<h3>WHITE SCORPION X MEMBER LIST</h3>
-	<ul class="official_link">
-		<li><a href="https://x.com/whsp_official"><img src="images/x.png" /></a></li>
-	</ul>
-  </section>
-  <hr>
-  <section class="official">
-	<h3>WHITE SCORPION MANAGER</h3>
-	<ul class="official_link">
-		<li><a href="https://www.tiktok.com/@whsp_manager"><img src="images/x.png" /></a></li>
-	</ul>
-  </section>
-  <hr>
-  <section class="members">
+  <section class="members" id="members">
+	  <h2>MEMBER</h2>
 	  <article class="members_list">
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -93,10 +102,135 @@
 			  </div>
 			  <img class="member_img" src="images/member-ace-new.png">
 		  </div>
+		  <div class="member_item">
+			  <div class="member_item_list">
+				<p class="member_item_name">ACO</p>
+				<ul class="member_icon">
+					<li><a href="https://whitescorpion.jp/member/#member-aco"><img src="images/web.png" /></a></li>
+					<li><a href="https://x.com/aco_whsp"><img src="images/x.png" /></a></li>
+					<li><a href="https://www.instagram.com/aco_whsp_ig"><img src="images/insta.png" /></a></li>
+				</ul>
+			  </div>
+			  <img class="member_img2" src="images/member-aco-new.png">
+		  </div>
+		  <div class="member_item">
+			  <div class="member_item_list">
+				<p class="member_item_name">ALLY</p>
+				<ul class="member_icon">
+					<li><a href="https://whitescorpion.jp/member/#member-ally"><img src="images/web.png" /></a></li>
+					<li><a href="https://x.com/ally_whsp"><img src="images/x.png" /></a></li>
+					<li><a href="https://www.instagram.com/ally_whsp_ig"><img src="images/insta.png" /></a></li>
+				</ul>
+			  </div>
+			  <img class="member_img" src="images/member-ally-new.png">
+		  </div>
+		  <div class="member_item">
+			  <div class="member_item_list">
+				<p class="member_item_name">AOI</p>
+				<ul class="member_icon">
+					<li><a href="https://whitescorpion.jp/member/#member-aoi"><img src="images/web.png" /></a></li>
+					<li><a href="https://x.com/aoi_whsp"><img src="images/x.png" /></a></li>
+					<li><a href="https://www.instagram.com/aoi_whsp_ig"><img src="images/insta.png" /></a></li>
+				</ul>
+			  </div>
+			  <img class="member_img2" src="images/member-aoi-new.png">
+		  </div>
+		  <div class="member_item">
+			  <div class="member_item_list">
+				<p class="member_item_name">CHOCO</p>
+				<ul class="member_icon">
+					<li><a href="https://whitescorpion.jp/member/#member-choco"><img src="images/web.png" /></a></li>
+					<li><a href="https://x.com/choco_whsp"><img src="images/x.png" /></a></li>
+					<li><a href="https://www.instagram.com/choco_whsp_ig"><img src="images/insta.png" /></a></li>
+				</ul>
+			  </div>
+			  <img class="member_img" src="images/member-choco-new.png">
+		  </div>
+		  <div class="member_item">
+			  <div class="member_item_list">
+				<p class="member_item_name">COCO</p>
+				<ul class="member_icon">
+					<li><a href="https://whitescorpion.jp/member/#member-coco"><img src="images/web.png" /></a></li>
+					<li><a href="https://x.com/coco_whsp"><img src="images/x.png" /></a></li>
+					<li><a href="https://www.instagram.com/coco_whsp_ig"><img src="images/insta.png" /></a></li>
+				</ul>
+			  </div>
+			  <img class="member_img2" src="images/member-coco-new.png">
+		  </div>
+		  <div class="member_item">
+			  <div class="member_item_list">
+				<p class="member_item_name">HANNA</p>
+				<ul class="member_icon">
+					<li><a href="https://whitescorpion.jp/member/#member-hanna"><img src="images/web.png" /></a></li>
+					<li><a href="https://x.com/hanna_whsp"><img src="images/x.png" /></a></li>
+					<li><a href="https://www.instagram.com/hanna_whsp_ig"><img src="images/insta.png" /></a></li>
+				</ul>
+			  </div>
+			  <img class="member_img" src="images/member-hanna-new.png">
+		  </div>
+		  <div class="member_item">
+			  <div class="member_item_list">
+				<p class="member_item_name">MOMO</p>
+				<ul class="member_icon">
+					<li><a href="https://whitescorpion.jp/member/#member-momo"><img src="images/web.png" /></a></li>
+					<li><a href="https://x.com/momo_whsp"><img src="images/x.png" /></a></li>
+					<li><a href="https://www.instagram.com/momo_whsp_ig"><img src="images/insta.png" /></a></li>
+				</ul>
+			  </div>
+			  <img class="member_img2" src="images/member-momo-new.png">
+		  </div>
+		  <div class="member_item">
+			  <div class="member_item_list">
+				<p class="member_item_name">NATSU</p>
+				<ul class="member_icon">
+					<li><a href="https://whitescorpion.jp/member/#member-natsu"><img src="images/web.png" /></a></li>
+					<li><a href="https://x.com/natsu_whsp"><img src="images/x.png" /></a></li>
+					<li><a href="https://www.instagram.com/natsu_whsp_ig"><img src="images/insta.png" /></a></li>
+				</ul>
+			  </div>
+			  <img class="member_img" src="images/member-natsu-new.png">
+		  </div>
+		  <div class="member_item">
+			  <div class="member_item_list">
+				<p class="member_item_name">NAVI</p>
+				<ul class="member_icon">
+					<li><a href="https://whitescorpion.jp/member/#member-navi"><img src="images/web.png" /></a></li>
+					<li><a href="https://x.com/navi_whsp"><img src="images/x.png" /></a></li>
+					<li><a href="https://www.instagram.com/navi_whsp_ig"><img src="images/insta.png" /></a></li>
+				</ul>
+			  </div>
+			  <img class="member_img2" src="images/member-navi-new.png">
+		  </div>
+		  <div class="member_item">
+			  <div class="member_item_list">
+				<p class="member_item_name">NICO</p>
+				<ul class="member_icon">
+					<li><a href="https://whitescorpion.jp/member/#member-nico"><img src="images/web.png" /></a></li>
+					<li><a href="https://x.com/nico_whsp"><img src="images/x.png" /></a></li>
+					<li><a href="https://www.instagram.com/nico_whsp_ig"><img src="images/insta.png" /></a></li>
+				</ul>
+			  </div>
+			  <img class="member_img" src="images/member-nico-new.png">
+		  </div>
 	  </article>
   </section>
-
+  <hr>
+  <section class="center">
+	  <h3>TEAM OVERSE</h3>
+	  <div class="overse">
+		  <div class="overse_btn">
+		  	<img class="member_img" src="images/idol3.jpg">
+		  	<div><a href="https://idol3.github.io">IDOL3.0 PROJECT FINALIST</a></div>
+		  </div>
+	  </div>
+	  
+  </section>
+	<hr>
+<section class="center">
+<p>©OVERSE</p>
+</section>
 </div>
 <!-- Main Container Ends -->
+
 </body>
 </html>
