--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <hr>
 	<h3>WHITE SCORPION X MEMBER LIST</h3>
 	<ul class="official_link">
-		<li><a href="https://x.com/whsp_official"><img src="images/x.png" /></a></li>
+		<li><a href="https://x.com/i/lists/1736245709048107338?t=NrnFYQth0CkSVZOJOAs2Ww&s=09"><img src="images/x.png" /></a></li>
 	</ul>
     <hr>
 	<h3>WHITE SCORPION MANAGER</h3>
@@ -122,6 +122,7 @@
 					<li><a href="https://whitescorpion.jp/member/#member-ally"><img src="images/web.png" /></a></li>
 					<li><a href="https://x.com/ally_whsp"><img src="images/x.png" /></a></li>
 					<li><a href="https://www.instagram.com/ally_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://youtu.be/5Re0uLRoXTc?feature=shared"><img src="images/youtube.png" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-ally-new.png">
@@ -133,6 +134,7 @@
 					<li><a href="https://whitescorpion.jp/member/#member-aoi"><img src="images/web.png" /></a></li>
 					<li><a href="https://x.com/aoi_whsp"><img src="images/x.png" /></a></li>
 					<li><a href="https://www.instagram.com/aoi_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://m.youtube.com/watch?v=31zIT_LQJDM&t=4020"><img src="images/youtube.png" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img2" src="images/member-aoi-new.png">
@@ -177,6 +179,7 @@
 					<li><a href="https://whitescorpion.jp/member/#member-momo"><img src="images/web.png" /></a></li>
 					<li><a href="https://x.com/momo_whsp"><img src="images/x.png" /></a></li>
 					<li><a href="https://www.instagram.com/momo_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://m.youtube.com/watch?v=j-KkANNsZJs&t=3960"><img src="images/youtube.png" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img2" src="images/member-momo-new.png">
