--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 
 <title>WHITE SCORPION FAN</title>
 <link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
-<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
-<script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -25,7 +23,7 @@
     </a>
     <nav>
       <ul>
-        <li><a href="#home">HOME</a></li>
+        <li><a href="#top">TOP</a></li>
         <li><a href="#media">CONTENTS</a></li>
         <li> <a href="#members">MEMBER</a></li>
       </ul>
@@ -36,7 +34,7 @@
 
   <!-- Hero Section -->
 	
-  <section class="home" id="home">
+  <section class="home" id="top">
     <p class="icon"><img src="images/icon.png" width="128px" height=auto alt=""/></p>
 	<h2 class="home_header">WHITE SCORPION</h2>
 	<p class="tagline">WHITE SCORPIONファンによる<BR>非公式リンクページです</p>
@@ -61,11 +59,7 @@
 		<li><a href="https://music.amazon.co.jp/artists/B0CNSLKWL5?ref=dm_sh_EWmasNWqL8gjqZwbabcrd68PO"><img src="images/amazonm.png" /></a></li>
 	</ul>
     <hr>
-	<h3>WHITE SCORPION X MEMBER LIST</h3>
-	<ul class="official_link">
-		<li><a href="https://x.com/i/lists/1736245709048107338?t=NrnFYQth0CkSVZOJOAs2Ww&s=09"><img src="images/x.png" /></a></li>
-	</ul>
-    <hr>
+
 	<h3>WHITE SCORPION MANAGER</h3>
 	<ul class="official_link">
 		<li><a href="https://www.tiktok.com/@whsp_manager"><img src="images/x.png" /></a></li>
@@ -221,6 +215,11 @@
   </section>
   <hr>
   <section class="center">
+  	  <h3>WHITE SCORPION X MEMBER LIST</h3>
+		<ul class="official_link">
+			<li><a href="https://x.com/i/lists/1736245709048107338?t=NrnFYQth0CkSVZOJOAs2Ww&s=09"><img src="images/x.png" /></a></li>
+		</ul>
+  	  <hr>
 	  <h3>TEAM OVERSE</h3>
 	  <div class="overse">
 		  <div class="overse_btn">
