--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 	<h3>WHITE SCORPION MANAGER</h3>
 	<ul class="official_link">
-		<li><a href="https://www.tiktok.com/@whsp_manager"><img src="images/x.png" /></a></li>
+		<li><a href="https://www.tiktok.com/@whsp_manager"><img src="images/tiktok.png" /></a></li>
 	</ul>
   </section>
   <hr>
