--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav>
       <ul>
         <li><a href="#top">TOP</a></li>
-        <li><a href="#media">CONTENTS</a></li>
+        <li><a href="#music">MUSIC</a></li>
         <li> <a href="#members">MEMBER</a></li>
       </ul>
     </nav>
@@ -65,8 +65,8 @@
 	</ul>
   </section>
   <hr>
-  <section class="media" id="media">
-	  <h2>CONTENTS</h2>
+  <section class="media" id="music">
+	  <h2>MUSIC</h2>
 	<div class="youtube">
 		<iframe src="https://www.youtube.com/embed/xlXkw-ShPjQ?si=EFQB8u9f5GQT55Tf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	</div>
