--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- Hero Section -->
 	
   <section class="home" id="top">
-    <p class="icon"><img src="images/icon.png" width="128px" height=auto alt=""/></p>
+    <p class="icon"><img src="images/icon.webp" width="128px" height=auto alt=""/></p>
 	<h2 class="home_header">WHITE SCORPION</h2>
 	<p class="tagline">WHITE SCORPIONファンによる<BR>非公式リンクページです</p>
   </section>
@@ -43,25 +43,25 @@
   <section class="center">
 	<h3>WHITE SCORPION OFFICIAL</h3>
 	<ul class="official_link">
-		<li><a href="https://whitescorpion.jp/"><img src="images/web.png" alt=""/></a></li>
-		<li><a href="https://fc.whitescorpion.jp/"><img src="images/fan.png" /></a></li>
-		<li><a href="https://x.com/whsp_official"><img src="images/x.png" /></a></li>
-		<li><a href="https://www.instagram.com/whsp_official"><img src="images/insta.png" /></a></li>
-		<li><a href="https://www.tiktok.com/@whsp_official"><img src="images/tiktok.png" /></a></li>
+		<li><a href="https://whitescorpion.jp/"><img src="images/web.webp" alt=""/></a></li>
+		<li><a href="https://fc.whitescorpion.jp/"><img src="images/fan.webp" /></a></li>
+		<li><a href="https://x.com/whsp_official"><img src="images/x.webp" /></a></li>
+		<li><a href="https://www.instagram.com/whsp_official"><img src="images/insta.webp" /></a></li>
+		<li><a href="https://www.tiktok.com/@whsp_official"><img src="images/tiktok.webp" /></a></li>
 	</ul>
 	<ul class="official_link">
-		<li><a href="https://open.spotify.com/artist/5LNpqa89tsQv64QYzfvsE5?si=zre4QlWfSbmrgZxL9vR04g"><img src="images/spotify.png" alt=""/></a></li>
-		<li><a href="https://m.youtube.com/@whsp_official"><img src="images/youtube.png" /></a></li>
-		<li><a href="https://music.youtube.com/channel/UCOPhAIdtSBUkt3mG6ErnwWg?feature=shared"><img src="images/youtubem.png" /></a></li>
-		<li><a href="https://music.apple.com/jp/artist/white-scorpion/1717706335?ls"><img src="images/applem.png" /></a></li>
-		<li><a href="https://lin.ee/D9cksiN"><img src="images/linem.png" /></a></li>
-		<li><a href="https://music.amazon.co.jp/artists/B0CNSLKWL5?ref=dm_sh_EWmasNWqL8gjqZwbabcrd68PO"><img src="images/amazonm.png" /></a></li>
+		<li><a href="https://open.spotify.com/artist/5LNpqa89tsQv64QYzfvsE5?si=zre4QlWfSbmrgZxL9vR04g"><img src="images/spotify.webp" alt=""/></a></li>
+		<li><a href="https://m.youtube.com/@whsp_official"><img src="images/youtube.webp" /></a></li>
+		<li><a href="https://music.youtube.com/channel/UCOPhAIdtSBUkt3mG6ErnwWg?feature=shared"><img src="images/youtubem.webp" /></a></li>
+		<li><a href="https://music.apple.com/jp/artist/white-scorpion/1717706335?ls"><img src="images/applem.webp" /></a></li>
+		<li><a href="https://lin.ee/D9cksiN"><img src="images/linem.webp" /></a></li>
+		<li><a href="https://music.amazon.co.jp/artists/B0CNSLKWL5?ref=dm_sh_EWmasNWqL8gjqZwbabcrd68PO"><img src="images/amazonm.webp" /></a></li>
 	</ul>
     <hr>
 
 	<h3>WHITE SCORPION MANAGER</h3>
 	<ul class="official_link">
-		<li><a href="https://www.tiktok.com/@whsp_manager"><img src="images/tiktok.png" /></a></li>
+		<li><a href="https://www.tiktok.com/@whsp_manager"><img src="images/tiktok.webp" /></a></li>
 	</ul>
   </section>
   <hr>
@@ -84,125 +84,125 @@
 			  <div class="member_item_list">
 				<p class="member_item_name">ACE</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-ace"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/ace_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/ace_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-ace"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/ace_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/ace_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-ace-new.png">
+			  <img class="member_img" src="images/member-ace-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">ACO</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-aco"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/aco_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/aco_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-aco"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/aco_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/aco_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-aco-new.png">
+			  <img class="member_img2" src="images/member-aco-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">ALLY</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-ally"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/ally_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/ally_whsp_ig"><img src="images/insta.png" /></a></li>
-					<li><a href="https://youtu.be/5Re0uLRoXTc?feature=shared"><img src="images/youtube.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-ally"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/ally_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/ally_whsp_ig"><img src="images/insta.webp" /></a></li>
+					<li><a href="https://youtu.be/5Re0uLRoXTc?feature=shared"><img src="images/youtube.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-ally-new.png">
+			  <img class="member_img" src="images/member-ally-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">AOI</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-aoi"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/aoi_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/aoi_whsp_ig"><img src="images/insta.png" /></a></li>
-					<li><a href="https://m.youtube.com/watch?v=31zIT_LQJDM&t=4020"><img src="images/youtube.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-aoi"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/aoi_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/aoi_whsp_ig"><img src="images/insta.webp" /></a></li>
+					<li><a href="https://m.youtube.com/watch?v=31zIT_LQJDM&t=4020"><img src="images/youtube.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-aoi-new.png">
+			  <img class="member_img2" src="images/member-aoi-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">CHOCO</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-choco"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/choco_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/choco_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-choco"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/choco_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/choco_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-choco-new.png">
+			  <img class="member_img" src="images/member-choco-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">COCO</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-coco"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/coco_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/coco_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-coco"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/coco_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/coco_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-coco-new.png">
+			  <img class="member_img2" src="images/member-coco-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">HANNA</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-hanna"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/hanna_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/hanna_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-hanna"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/hanna_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/hanna_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-hanna-new.png">
+			  <img class="member_img" src="images/member-hanna-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">MOMO</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-momo"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/momo_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/momo_whsp_ig"><img src="images/insta.png" /></a></li>
-					<li><a href="https://m.youtube.com/watch?v=j-KkANNsZJs&t=3960"><img src="images/youtube.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-momo"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/momo_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/momo_whsp_ig"><img src="images/insta.webp" /></a></li>
+					<li><a href="https://m.youtube.com/watch?v=j-KkANNsZJs&t=3960"><img src="images/youtube.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-momo-new.png">
+			  <img class="member_img2" src="images/member-momo-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">NATSU</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-natsu"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/natsu_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/natsu_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-natsu"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/natsu_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/natsu_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-natsu-new.png">
+			  <img class="member_img" src="images/member-natsu-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">NAVI</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-navi"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/navi_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/navi_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-navi"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/navi_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/navi_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-navi-new.png">
+			  <img class="member_img2" src="images/member-navi-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">NICO</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-nico"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/nico_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/nico_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-nico"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/nico_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/nico_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-nico-new.png">
+			  <img class="member_img" src="images/member-nico-new.webp">
 		  </div>
 	  </article>
   </section>
@@ -210,13 +210,13 @@
   <section class="center">
   	  <h3>WHITE SCORPION X MEMBER LIST</h3>
 		<ul class="official_link">
-			<li><a href="https://x.com/i/lists/1736245709048107338?t=NrnFYQth0CkSVZOJOAs2Ww&s=09"><img src="images/x.png" /></a></li>
+			<li><a href="https://x.com/i/lists/1736245709048107338?t=NrnFYQth0CkSVZOJOAs2Ww&s=09"><img src="images/x.webp" /></a></li>
 		</ul>
   	  <hr>
 	  <h3>TEAM OVERSE</h3>
 	  <div class="overse">
 		  <div class="overse_btn">
-		  	<img class="member_img" src="images/idol3.jpg">
+		  	<img class="member_img" src="images/idol3.webp">
 		  	<div><a href="https://idol3.github.io">IDOL3.0 PROJECT FINALIST</a></div>
 		  </div>
 	  </div>
