--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 	  <div class="overse">
 		  <div class="overse_btn">
 		  	<img class="member_img" src="images/idol3.webp">
-		  	<div><a href="https://idol3.github.io">IDOL3.0 PROJECT FINALIST</a></div>
+		  	<div><a href="https://i3pfan.github.io">IDOL3.0 PROJECT FINALIST</a></div>
 		  </div>
 	  </div>
 	  
