--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 </head>
 <body>
   <!-- Navigation -->
-  <header class="header"> <a href="">
-    <h4 class="logo"></h4>
-    </a>
+  <header class="header">
     <nav>
       <ul>
         <li><a href="#top">TOP</a></li>
