--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">ACE</p>
+				<p class="member_item_birth">BIRTH  11.6</p>
 				<ul class="member_icon">
 					<li><a href="https://whitescorpion.jp/member/#member-ace"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/ace_whsp"><img src="images/x.webp" /></a></li>
@@ -92,6 +93,7 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">ACO</p>
+				<p class="member_item_birth">BIRTH  5.30</p>
 				<ul class="member_icon">
 					<li><a href="https://whitescorpion.jp/member/#member-aco"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/aco_whsp"><img src="images/x.webp" /></a></li>
@@ -103,6 +105,7 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">ALLY</p>
+				<p class="member_item_birth">BIRTH  4.17</p>
 				<ul class="member_icon">
 					<li><a href="https://whitescorpion.jp/member/#member-ally"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/ally_whsp"><img src="images/x.webp" /></a></li>
@@ -115,6 +118,7 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">AOI</p>
+				<p class="member_item_birth">BIRTH  10.13</p>
 				<ul class="member_icon">
 					<li><a href="https://whitescorpion.jp/member/#member-aoi"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/aoi_whsp"><img src="images/x.webp" /></a></li>
@@ -127,6 +131,7 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">CHOCO</p>
+				<p class="member_item_birth">BIRTH  12.27</p>
 				<ul class="member_icon">
 					<li><a href="https://whitescorpion.jp/member/#member-choco"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/choco_whsp"><img src="images/x.webp" /></a></li>
@@ -138,6 +143,7 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">COCO</p>
+				<p class="member_item_birth">BIRTH  3.18</p>
 				<ul class="member_icon">
 					<li><a href="https://whitescorpion.jp/member/#member-coco"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/coco_whsp"><img src="images/x.webp" /></a></li>
@@ -149,6 +155,7 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">HANNA</p>
+				<p class="member_item_birth">BIRTH  12.17</p>
 				<ul class="member_icon">
 					<li><a href="https://whitescorpion.jp/member/#member-hanna"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/hanna_whsp"><img src="images/x.webp" /></a></li>
@@ -160,6 +167,7 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">MOMO</p>
+				<p class="member_item_birth">BIRTH  12.7</p>
 				<ul class="member_icon">
 					<li><a href="https://whitescorpion.jp/member/#member-momo"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/momo_whsp"><img src="images/x.webp" /></a></li>
@@ -172,6 +180,7 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">NATSU</p>
+				<p class="member_item_birth">BIRTH  7.16</p>
 				<ul class="member_icon">
 					<li><a href="https://whitescorpion.jp/member/#member-natsu"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/natsu_whsp"><img src="images/x.webp" /></a></li>
@@ -183,6 +192,7 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">NAVI</p>
+				<p class="member_item_birth">BIRTH  3.20</p>
 				<ul class="member_icon">
 					<li><a href="https://whitescorpion.jp/member/#member-navi"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/navi_whsp"><img src="images/x.webp" /></a></li>
@@ -194,6 +204,7 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">NICO</p>
+				<p class="member_item_birth">BIRTH  5.23</p>
 				<ul class="member_icon">
 					<li><a href="https://whitescorpion.jp/member/#member-nico"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/nico_whsp"><img src="images/x.webp" /></a></li>
