--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </head>
 <body>
   <!-- Navigation -->
-  <header class="header">
+  <header class="header"><a href="">
+    <h4 class="logo"></h4>
+    </a>
     <nav>
       <ul>
         <li><a href="#top">TOP</a></li>
